--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h2>tntweather</h2>
-<a href="Tuesday April 5th - Snow.html">04/05/2022</a>
+<a href="dir/Tuesday April 5th - Snow.html">04/05/2022</a>
