--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
 <h2>tntweather</h2>
-<a href="dir/Tuesday April 5th - Snow.html">04/05/2022</a>
+ {% assign doclist = site.pages | sort: 'url'  %}
+    <ul>
+       {% for doc in doclist %}
+            {% if doc.name contains '.md' or doc.name contains '.html' %}
+                <li><a href="{{ site.baseurl }}{{ doc.url }}">{{ doc.url }}</a></li>
+            {% endif %}
+        {% endfor %}
+    </ul>
